--- a/index.html
+++ b/index.html
@@ -6,74 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <style>
-        /* body{
-            margin: 0;
-        } */
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: black;
-        }
+    <link href=" https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap " rel="stylesheet ">
 
-        .header p {
-            color: #fff;
-            padding: 0px 20px 10px 30px;
-            text-align: center;
-
-        }
-
-        .header button {
-            border-radius: 50%;
-
-
-        }
-
-        .header button:hover {
-            border-radius: 50%;
-            background-color: orange;
-        }
-
-
-        .logo {
-            display: contents;
-        }
-
-        .fa-phone-alt {
-            color: orange;
-        }
-
-        .logo {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo button {
-            background-color: #fff;
-            border: 1px solid orange;
-            color: rgb(255, 145, 0);
-
-        }
-        .logo button:hover{
-            background-color:rgb(0, 162, 255);
-            color: #fff;
-        }
-       
-    </style>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
         integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
 
 </head>
 
 <body>
-    <div class="header">
-        <div>
+    <div class="arrow">
+        <button><i class="fas fa-arrow-up"></i></button>
+    </div>
+    <div class="phone">
+        <button><i class="fas fa-phone-alt"></i></button>
 
-            <p><i class="fas fa-phone-alt"></i> Toll-free:(123)456-7890</p>
+    </div>
+
+
+    <div class="header">
+        <div class="phone_number">
+            <i class="fas fa-phone-alt"></i>
+            "Toll-free:"
+            <a href="#"> (123)456-7890</a>
         </div>
-        <div>
+        <div class="buttongroup">
             <button><i class="fab fa-twitter"></i></button>
             <button><i class="fab fa-facebook-f"></i></button>
             <button><i class="fab fa-pinterest"></i></button>
@@ -82,34 +39,163 @@
         </div>
 
     </div>
-
-    <div class="logo">
-        <p><img src="asset.png" alt="logo">Anilove</p>
-
+    <div class="home">
+        <div class="logo">
+            <a href="#"> <img src="asset.png" alt="logo">
+                Anilove
+            </a>
+        </div>
         <nav class="menu">
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Events</a>
             <a href="#">News</a>
             <a href="#">Contact</a> </nav>
-        <div>
+        <div class="do">
             <button>DONATE NOW!</button>
-
         </div>
     </div>
     <div class="cat">
-        <img src="cat.jpeg" alt="cat">
-        <p>
-            Animals Need  YOUR Help!
-            You can chip in with money&effort
-        </p>
-        <button>DONATENOW!</button>
+        <div class="cat-text">
+            <p class="text1">
+                Animals Need
+            </p>
+            <p class="text2">
+                YOUR Help!
+            </p>
+            <p class="text3">
+                You can chip in with money&effort!
+            </p>
+            <button class="DONATE">DONATENOW!</button>
+        </div>
     </div>
-   
 
+    <div class="about ">
+        <img src="/assets/asset 1.jpeg" alt="About us">
+        <div class="about-text">
+            <p class="about-text1">About Us </p>
+            <p class="about-text2">What Makes Us Care About Pets?</p>
+            <p class="about-text3">If it wasn’t for our founder’s childhood spent on a ranch in northern Texas,
+                surrounded by
+                domestic animals and pets all the time till she went to college – there might have been no
+                Anilove animal shelter now. So as soon as she graduated with her Veterinary degree 12 years ago,
+                she already knew what she will be doing for a living.</p>
+            <p class="about-text4">All in all, with thousands of animals saved off the streets and cared for every year,
+                we hope to
+                encourage much more pet adoptions to happen!</p>
+            <button class="about-text5">LEARN MORE</button>
+        </div>
+    </div>
 
+    <div class="help ">
+        <div>
+            <p class="help-text1"> How You Can Help</p>
+            <p class="help-text2">There Are Countless Ways You Can
+                Join In & Help Us!</p>
+        </div>
+        <div class="catphoto">
+            <div class="sleepcat">
+                <img src="/assets/asset 8.jpeg " alt="sleepcat ">
+                <div class="cover">
+                    <a href="#">Volunteer</a>
+                </div>
+            </div>
+            <div class="girl_dog">
+                <img src="/assets/asset 9.jpeg " alt="girl_dog">
+                <div class="cover">
+                    <a href="#">Adopt</a>
+                </div>
+            </div>
+            <div class="woman_cat">
+                <img src="/assets/asset 10.jpeg " alt="woman_cat ">
+                <div class="cover">
+                    <a href="#">Sponsor</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
+    </div>
+    <div class="volunteer">
+        <div class="volunteer-text1">
+<p class="volunteer-world1">
+    Volunteer to Save
+    <br>Animals Now!</p>
+    <img src="/assets/asset22.jpg " alt="volunteer1">
+    </div>
+    <div class="volunteer-text2">
+    <img src="/assets/asset23.jpg " alt="volunteer2">
+    <p class="volunteer-world2">
+    "With so many pets less fortunate than your cat and dog, there’s always something you can do about it!"
+    </p>
+           <button class="volunteer-button">Volunteer</button>
+    </div>
+    </div>
+    <div class="event">
+        <p class="event-text1">Upcoming Events</p>
+        <p class="event-text2">Kennel Training Class</p>
+        <p class="event-text3">FR,June 11th</p>
+        <button class="event-button1">DETAILS</button>
+        <button class="event-button2">DETAILS</button>
+</div>
+<div class="dog-jogging"></div>
+<div class="Lastest-News">
+       <p class="Lastest-Newstext1">Latest News & Updates</p>
+       <p class="Lastest-Newstext2">See a Video Review of Our Cutest Pets!</p>
+</div>
+<div class="media">
+    <i<iframe width="1160" height="500" src="https://www.youtube.com/embed/eM1UfDSznpY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+   </div>
+   <div class="pro">
+       <div class="pro-f">
+           <div>
+               <img src="./assets/asset33.jpg" alt="pro">
+               <br>
+           </div>
+           <p>18 Sept, by  Jennifer Moreno</p>
+           <h1>
+            New Advancements in the
+            <br>
+            Veterinary Industry
+           </h1>
+     </div>
+     <div class="pro-m">
+     <div>
+         <img src="./assets/asset34.jpg" alt="pro-m">
+         <br>
+     </div>
+     <p>18 Sept, by Jennifer Moreno</p>
+     <h1>Do Dogs Hate It When You Hug
+         <br>
+         Them?
+     </h1>
+    </div>
+   </div>
+<div class="dogwithboy"></div>
+<div class="adorable">
+    <p>See Our Adorable Pets@Instagram!</p>
+</div>
+<div class="adorablepho">
+    <img src="./assets/asset 3.jpeg" alt="dogplaying">
+    <img src="/assets/asset 4.jpeg" alt="cat">
+    <img src="/assets/asset 5.jpeg" alt="dogwithgirl">
+    <img src="/assets/asset 6.jpeg" alt="catinbed">
+</div>
+<div class="footer">
+    <div class="logodown">
+        <img src="./assets/asset 0.png" alt="logo">
+        <h1>Anilove</h1>
+    </div>
+    <div class="contact">
+        <p>paid for by the ConLiberal NATIONAL COMMITTEE</p>
+        <p>(123)456-7890</p>
+        <p>ConLiberal NATIONAL COMMITTEE 430 South Capitol Street Southeast Washington, DC 20003
+        </p>
+    </div>
+    <div class="foot">
+    <p>2020@Anilove.All reghts reserved.</p>
+    </div>
+</div>
 </body>
 
 </html>
