--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>貓貓網站</title>
 
     <link href=" https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap " rel="stylesheet ">
 
@@ -16,10 +16,10 @@
 
 <body>
     <div class="arrow">
-        <button><i class="fas fa-arrow-up"></i></button>
+        <i class="fas fa-arrow-up"></i>
     </div>
     <div class="phone">
-        <button><i class="fas fa-phone-alt"></i></button>
+        <i class="fas fa-phone-alt"></i>
 
     </div>
 
@@ -144,7 +144,7 @@
        <p class="Lastest-Newstext2">See a Video Review of Our Cutest Pets!</p>
 </div>
 <div class="media">
-    <i<iframe width="1160" height="500" src="https://www.youtube.com/embed/eM1UfDSznpY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+    <iframe width="720" height="480" src="https://www.youtube.com/embed/nm1s4p76yyg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    </div>
    <div class="pro">
        <div class="pro-f">
