小貓網站完成版

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="header">
         <div class="phone_number">
             <i class="fas fa-phone-alt"></i>
-            "Toll-free:"
-            <a href="#"> (123)456-7890</a>
+            Toll-free:
+            <a href="tel:123456789"> (123)456-7890</a>
         </div>
         <div class="buttongroup">
             <button><i class="fab fa-twitter"></i></button>
@@ -46,7 +46,7 @@
             </a>
         </div>
         <nav class="menu">
-            <a href="#">Home</a>
+            <a href="#" class="baseline">Home</a>
             <a href="#">About</a>
             <a href="#">Events</a>
             <a href="#">News</a>
@@ -94,19 +94,19 @@
                 Join In & Help Us!</p>
         </div>
         <div class="catphoto">
-            <div class="sleepcat">
+            <div class="catphoto-item">
                 <img src="/assets/asset 8.jpeg " alt="sleepcat ">
                 <div class="cover">
                     <a href="#">Volunteer</a>
                 </div>
             </div>
-            <div class="girl_dog">
+            <div class="catphoto-item">
                 <img src="/assets/asset 9.jpeg " alt="girl_dog">
                 <div class="cover">
                     <a href="#">Adopt</a>
                 </div>
             </div>
-            <div class="woman_cat">
+            <div class="catphoto-item">
                 <img src="/assets/asset 10.jpeg " alt="woman_cat ">
                 <div class="cover">
                     <a href="#">Sponsor</a>
@@ -118,18 +118,18 @@
     </div>
     <div class="volunteer">
         <div class="volunteer-text1">
-<p class="volunteer-world1">
-    Volunteer to Save
-    <br>Animals Now!</p>
-    <img src="/assets/asset22.jpg " alt="volunteer1">
-    </div>
-    <div class="volunteer-text2">
-    <img src="/assets/asset23.jpg " alt="volunteer2">
-    <p class="volunteer-world2">
-    "With so many pets less fortunate than your cat and dog, there’s always something you can do about it!"
-    </p>
-           <button class="volunteer-button">Volunteer</button>
-    </div>
+            <p class="volunteer-world1">
+                Volunteer to Save
+                <br>Animals Now!</p>
+            <img src="/assets/asset22.jpg " alt="volunteer1">
+        </div>
+        <div class="volunteer-text2">
+            <img src="/assets/asset23.jpg " alt="volunteer2">
+            <p class="volunteer-world2">
+                "With so many pets less fortunate than your cat and dog, there’s always something you can do about it!"
+            </p>
+            <button class="volunteer-button">Volunteer</button>
+        </div>
     </div>
     <div class="event">
         <p class="event-text1">Upcoming Events</p>
@@ -137,65 +137,123 @@
         <p class="event-text3">FR,June 11th</p>
         <button class="event-button1">DETAILS</button>
         <button class="event-button2">DETAILS</button>
-</div>
-<div class="dog-jogging"></div>
-<div class="Lastest-News">
-       <p class="Lastest-Newstext1">Latest News & Updates</p>
-       <p class="Lastest-Newstext2">See a Video Review of Our Cutest Pets!</p>
-</div>
-<div class="media">
-    <iframe width="720" height="480" src="https://www.youtube.com/embed/nm1s4p76yyg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
-   <div class="pro">
-       <div class="pro-f">
-           <div>
-               <img src="./assets/asset33.jpg" alt="pro">
-               <br>
-           </div>
-           <p>18 Sept, by  Jennifer Moreno</p>
-           <h1>
-            New Advancements in the
-            <br>
-            Veterinary Industry
-           </h1>
-     </div>
-     <div class="pro-m">
-     <div>
-         <img src="./assets/asset34.jpg" alt="pro-m">
-         <br>
-     </div>
-     <p>18 Sept, by Jennifer Moreno</p>
-     <h1>Do Dogs Hate It When You Hug
-         <br>
-         Them?
-     </h1>
     </div>
-   </div>
-<div class="dogwithboy"></div>
-<div class="adorable">
-    <p>See Our Adorable Pets@Instagram!</p>
-</div>
-<div class="adorablepho">
-    <img src="./assets/asset 3.jpeg" alt="dogplaying">
-    <img src="/assets/asset 4.jpeg" alt="cat">
-    <img src="/assets/asset 5.jpeg" alt="dogwithgirl">
-    <img src="/assets/asset 6.jpeg" alt="catinbed">
-</div>
-<div class="footer">
-    <div class="logodown">
-        <img src="./assets/asset 0.png" alt="logo">
-        <h1>Anilove</h1>
+    <div class="dog-jogging"></div>
+    <div class="Lastest-News">
+        <p class="Lastest-Newstext1">Latest News & Updates</p>
+        <p class="Lastest-Newstext2">See a Video Review of Our Cutest Pets!</p>
     </div>
-    <div class="contact">
-        <p>paid for by the ConLiberal NATIONAL COMMITTEE</p>
-        <p>(123)456-7890</p>
-        <p>ConLiberal NATIONAL COMMITTEE 430 South Capitol Street Southeast Washington, DC 20003
-        </p>
+    <div class="media">
+        <iframe width="720" height="480" src="https://www.youtube.com/embed/nm1s4p76yyg" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-    <div class="foot">
-    <p>2020@Anilove.All reghts reserved.</p>
+    <div class="pro">
+        <div class="pro-f">
+            <div>
+                <img src="./assets/asset33.jpg" alt="pro">
+                <br>
+            </div>
+            <p>18 Sept, by Jennifer Moreno</p>
+            <h1>
+                New Advancements in the
+                <br>
+                Veterinary Industry
+            </h1>
+        </div>
+        <div class="pro-m">
+            <div>
+                <img src="./assets/asset34.jpg" alt="pro-m">
+                <br>
+            </div>
+            <p>18 Sept, by Jennifer Moreno</p>
+            <h1>Do Dogs Hate It When You Hug
+                <br>
+                Them?
+            </h1>
+        </div>
     </div>
-</div>
+    <div class="dogwithboy">
+        <div class="dogwithboy1">
+            <img src="./assets/asset41.jpg" alt="">
+            <p>1000
+                <br>
+                pets
+            </p>
+        </div>
+        <div class="dogwithboy2">
+            <img src="./assets/asset42.jpg" alt="">
+            <p>20
+                <br>
+                Awards
+            </p>
+        </div>
+        <div class="dogwithboy3">
+            <img src="./assets/asset43.jpg" alt="">
+            <p>100
+                <br>
+                Staffers
+            </p>
+        </div>
+        <div class="dogwithboy4">
+            <img src="./assets/asset44.jpg" alt="">
+            <p>1200
+                <br>
+                Contributors
+            </p>
+        </div>
+
+    </div>
+    <div class="adorable">
+        <p>See Our Adorable Pets@Instagram!</p>
+    </div>
+    <div class="adorable-photos">
+        <div class="adorable-photos-item">
+            <img src="./assets/asset 3.jpeg" alt="dogplaying">
+            <div class="cover">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="adorable-photos-item">
+        <img src="/assets/asset 4.jpeg" alt="cat">
+        <div class="cover">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+        <div class="adorable-photos-item">
+        <img src="/assets/asset 5.jpeg" alt="dogwithgirl">
+        <div class="cover">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+        <div class="adorable-photos-item">
+        <img src="/assets/asset 6.jpeg" alt="catinbed">
+        <div class="cover">
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+    </div>
+    <div class="footer">
+        <div class="logodown">
+            <img src="./assets/asset 0.png" alt="logo">
+            <h1>Anilove</h1>
+        </div>
+        <ul class="fbutton">
+            <li class="fbutton_one"><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li class="fbutton_two"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="fbutton_thr"><a href="#"><i class="fab fa-pinterest"></i></a></li>
+            <li class="fbutton_four"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+        </ul>
+        <div class="contact">
+            <p>paid for by the ConLiberal NATIONAL COMMITTEE</p>
+            <p><i class="fas fa-phone-alt"></i>(123)456-7890</p>
+            <p><i class="fas fa-map-marker-alt"></i>ConLiberal NATIONAL COMMITTEE 430 South Capitol Street Southeast
+                Washington, DC 20003
+            </p>
+        </div>
+        <div class="foot">
+            <p>2020@Anilove.All reghts reserved.</p>
+        </div>
+    </div>
 </body>
 
 </html>
