--- a/Project/Project2/index.html
+++ b/Project/Project2/index.html
@@ -1,11 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>蔬菜網站</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="arrow">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+    <div class="header">
+        <div class="sale">
+            <p>Last sale up to 20% OFF. Use code “SALE70”.</p>
+        </div>
+        <div class="menu">
+            <a href="#">COMPARE</a>
+            <a href="#">WISHLIST</a>
+            <a href="#">LOGIN</a>
+            <a href="#">CART:0</a>
+            <a href="#">US$</a>
+        </div>
+    </div>
+    <div class="logo">
+        <div class="icon">
+            <img src="/image/logo.png" alt="logo">
+        </div>
+        <div class="nav">
+            <a href="#">HOME</a>
+            <a href="#">ABOUT</a>
+            <a href="#">FEATURES</a>
+            <a href="#">BLOG</a>
+            <a href="#">SHOP</a>
+            <a href="#">CONTACT</a>
+        </div>
+    </div>
+    <div class="main">
+        <div class="text">
+            <p>
+                Green Leaves
+
+                <br>
+                Up To
+                <b>20% Off</b>
+            </p>
+            <br>
+            <p>Always Fresh, Crispy and Full of Vitamins</p>
+            <button>ADD TO CART</button>
+        </div>
+    </div>
+    <div class="welcome">
+        <h1>Welcome to our healthy farm!</h1>
+    </div>
+    <div class="three">
+        <div class="wrap">
+            <img src="./image/one.png" alt="one">
+            <h2>Best Quality Products</h2>
+            <p>We stand for providing the most fresh organic products which will serve your health and be a source of vitamins and minerals for our clients.</p>
+        </div>
+        <div class="wrap">
+            <img src="./image/two.png" alt="two">
+            <h2>Farmer Products</h2>
+            <p>We work with many farms to provide you with natural products grown with love and care with no GMO or pesticides.</p>
+        </div>
+        <div class="wrap">
+            <img src="./image/three.png" alt="three">
+            <h2>Fast Delivery</h2>
+            <p>We want our client to receive their fresh products as soon as possible, so we process and ship the order at once.</p>
+        </div>
+    </div>
+    <div class="two-pic">
+        <div class="sale-pic">
+            <img src="./image/sale-one .png" alt="dale-one">
+        </div>
+        <div class="sale-two">
+            <img src="./image/sale-two.png" alt="sale-two">
+        </div>
+    </div>
+    <div class="product">
+        <h3>Our Products</h3>
+    </div>
+    <div class="products-nav">
+        <a href="#">NEW ARRIVALS</a>
+        <a href="#">ORGANIC & NATURAL</a>
+        <a href="#">THE FARM STORY</a>
+        <a href="#">PLUM CAKE</a>
+    </div>
+    <div class="sale-items">
+        <div class="items">
+
+        </div>
+        <div class="items">
+            <img src="./image/Beetroot.png" alt="Beetroot">
+        </div>
+        <div class="items">
+            <img src="/image/Cauliflower.png" alt="Cauliflower">
+        </div>
+        <div class="items">
+            <img src="./image/Fennel.png" alt="Fennel">
+        </div>
+        <div class="items">
+            <img src="./image/Pumpkin.png" alt="Pumpkin">
+        </div>
+        <div class="items">
+            <img src="./image/Kiwi.png" alt=" Kiwi">
+        </div>
+        <div class="items">
+            <img src="./image/Mushrooms.png" alt="Mushrooms">
+        </div>
+        <div class="items">
+            <img src="./image/Parsley.png" alt="Parsley">
+        </div>
+        <div class="items">
+            <img src="./image/Potatoes.png" alt="Potatoes">
+        </div>
+    </div>
+    <div class="fresh">
+
+    </div>
+    <div class="love">
+        <img src="./image/love.png" alt="love">
+    </div>
+    <div class="lastest">
+
+    </div>
+    <div class="cereal">
+       <div class="sale-item"></div>
+       <div class="sale-item"></div>
+       <div class="sale-item"></div>
+       <div class="sale-item">
+           <img src="./image/Beetroot.png" alt="Beetroot">
+       </div>
+       <div class="sale-item">
+        <img src="./image/Beetroot.png" alt="Beetroot">
+       </div>
+       <div class="sale-item">
+        <img src="./image/Beetroot.png" alt="Beetroot">
+       </div>
+       <div class="sale-item">
+           <img src="./image/Cauliflower.png" alt="Cauliflower">
+       </div>
+       <div class="sale-item">
+        <img src="./image/Cauliflower.png" alt="Cauliflower">
+       </div>
+       <div class="sale-item">
+        <img src="./image/Cauliflower.png" alt="Cauliflower">
+       </div>
+       <div class="sale-item">
+           <img src="./image/mill.png" alt="mill">
+       </div>
+       <div class="sale-item">
+        <img src="./image/mill.png" alt="mill">
+       </div>
+       <div class="sale-item">
+        <img src="./image/mill.png" alt="mill">
+       </div>
+    </div>
 </body>
+
 </html>
