--- a/Project/Project2/index.html
+++ b/Project/Project2/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
         integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -18,13 +19,20 @@
         <div class="sale">
             <p>Last sale up to 20% OFF. Use code “SALE70”.</p>
         </div>
-        <div class="menu">
+        <!-- <div class="menu">
             <a href="#">COMPARE</a>
             <a href="#">WISHLIST</a>
             <a href="#">LOGIN</a>
             <a href="#">CART:0</a>
             <a href="#">US$</a>
-        </div>
+        </div> -->
+         <ul class="menu">
+        <li><a href="#">COMPARE</a></li>
+        <li><a href="#">WISHLIST</a></li>
+        <li><a href="#">LOGIN</a></li>
+        <li><a href="#">CART:0</a></li>
+        <li><a href="#">US$</a></li>
+     </ul>
     </div>
     <div class="logo">
         <div class="icon">
@@ -60,17 +68,20 @@
         <div class="wrap">
             <img src="./image/one.png" alt="one">
             <h2>Best Quality Products</h2>
-            <p>We stand for providing the most fresh organic products which will serve your health and be a source of vitamins and minerals for our clients.</p>
+            <p>We stand for providing the most fresh organic products which will serve your health and be a source of
+                vitamins and minerals for our clients.</p>
         </div>
         <div class="wrap">
             <img src="./image/two.png" alt="two">
             <h2>Farmer Products</h2>
-            <p>We work with many farms to provide you with natural products grown with love and care with no GMO or pesticides.</p>
+            <p>We work with many farms to provide you with natural products grown with love and care with no GMO or
+                pesticides.</p>
         </div>
         <div class="wrap">
             <img src="./image/three.png" alt="three">
             <h2>Fast Delivery</h2>
-            <p>We want our client to receive their fresh products as soon as possible, so we process and ship the order at once.</p>
+            <p>We want our client to receive their fresh products as soon as possible, so we process and ship the order
+                at once.</p>
         </div>
     </div>
     <div class="two-pic">
@@ -91,74 +102,257 @@
         <a href="#">PLUM CAKE</a>
     </div>
     <div class="sale-items">
-        <div class="items">
 
-        </div>
         <div class="items">
             <img src="./image/Beetroot.png" alt="Beetroot">
+            <div id="sale">Sale</div>
+            <h2>Organic,Vegetable,Fruit</h2>
+            <h4>Organic Beetroot</h4>
+            <p>2.56$</p>
         </div>
         <div class="items">
             <img src="/image/Cauliflower.png" alt="Cauliflower">
+            <div id="featured">FEATURED</div>
+            <h2>Organic,Fruit</h2>
+            <h4>Organic Cauliflower</h4>
+            <p>7.88$</p>
         </div>
         <div class="items">
             <img src="./image/Fennel.png" alt="Fennel">
+            <h2>Organic,Vegetable,Fruit</h2>
+            <h4>Organic Fennel</h4>
+            <p>4.81$</p>
         </div>
         <div class="items">
             <img src="./image/Pumpkin.png" alt="Pumpkin">
+            <h2>Organic,Vegetable</h2>
+            <h4>Organic Jap Pumpkin 1kg</h4>
+            <p>9.88$</p>
         </div>
         <div class="items">
             <img src="./image/Kiwi.png" alt=" Kiwi">
+            <h2>Organic,Fruit</h2>
+            <h4>Organic Kiwi Fruit 500g</h4>
+            <p>6.88$</p>
         </div>
         <div class="items">
             <img src="./image/Mushrooms.png" alt="Mushrooms">
+            <h2>Organic,Vegetable,Fruit</h2>
+            <h4>Organic Mushrooms,250g</h4>
+            <p>10$</p>
         </div>
         <div class="items">
             <img src="./image/Parsley.png" alt="Parsley">
+            <h2>Organic,Vegetable,Fruit</h2>
+            <h4>Organic Parsley</h4>
+            <p>2.25$</p>
         </div>
         <div class="items">
             <img src="./image/Potatoes.png" alt="Potatoes">
+            <div id="featured">FEATURED</div>
+            <h2>Organic,Vegetable,Fruit</h2>
+            <h4>Organic Sebago Potatoes</h4>
+            <p>2.50-7.50$</p>
         </div>
     </div>
     <div class="fresh">
+        <h1>Fruits and Vegetables</h1>
+        <h2>Fruits and Vegetables</h2>
+        <button>SHOP NOW!</button>
 
     </div>
     <div class="love">
         <img src="./image/love.png" alt="love">
+        <div>
+            <div>
+                <h2>A Source of Vitamins</h2>
+                <p>Vegetables can be eaten either raw or cooked and play an important role in human nutrition, being
+                    mostly low in fat and carbohydrates, but high in vitamins, minerals and dietary fiber.</p>
+            </div>
+            <div>
+                <h2>Best Quality Products</h2>
+                <p>“We eliminated any possible pollution in our soils in order to deliver the purest organic produce to
+                    our customers’ tables.“</p>
+            </div>
+            <div>
+                <h2>Best Quality Products</h2>
+                <p>“We eliminated any possible pollution in our soils in order to deliver the purest organic produce to
+                    our customers’ tables.“</p>
+            </div>
+        </div>
     </div>
-    <div class="lastest">
+    <div class="blog">
+        <h2>Latest from the Blog</h2>
+        <div class="lastest">
+            <div class="wrap">
+                <img src="./image/Benefits.png" alt="blog">
+                <button>YOUR HEALTH</button>
+                <h3>Health Benefits of a Raw Food</h3>
+                <p>October23,2017-
+                    <br>
+                    Comments:0
+                    by admin
+                </p>
+            </div>
+            <div class="wrap">
+                <img src="./image/Anytime.png" alt="blog">
+                <button>YOUR HEALTH</button>
+                <h3>The Anytime Snack Pack for Everyone</h3>
+                <p>October23,2017-
+                    <br>
+                    Comments:1
+                    Posted by admin
+                </p>
+            </div>
+            <div class="wrap">
+                <img src="./image/Kiddos.png" alt="blog">
+                <button>YOUR HEALTH</button>
+                <h3>After-School Snacks the Kiddos Will Love</h3>
+                <p>October23,2017-
+                    <br>
+                    Comments:2
+                    Posted by admin
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="cereal">
+        <div class="sale-item">
+            <h2>
 
+                Cold Cereal
+
+            </h2>
+        </div>
+        <div class="sale-item">
+            <h2>
+                Cold Cereal
+            </h2>
+        </div>
+        <div class="sale-item">
+
+            <h2>Cold Cereal</h2>
+
+        </div>
+    </div> -->
+    <div class="sale">
+        <div class="sale-item">
+            <h2>Cold Cereal</h2>
+            <img src="./image/Beetroot.png" alt="Beetroot">
+            <h1>Organic, Vegetable, Fruit</h1>
+            <h4>Organic Beetroot</h4>
+            <p>2.56$</p>
+        </div>
+        <div class="sale-item">
+            <h2>Cold Cereal</h2>
+            <img src="./image/Beetroot.png" alt="Beetroot">
+            <h1>Organic, Vegetable, Fruit</h1>
+            <h4>Organic Beetroot</h4>
+            <p>2.56$</p>
+        </div>
+        <div class="sale-item">
+            <h2>Cold Cereal</h2>
+            <img src="./image/Beetroot.png" alt="Beetroot">
+            <h1>Organic, Vegetable, Fruit</h1>
+            <h4>Organic Beetroot</h4>
+            <p>2.56$</p>
+        </div>
+        <div class="sale-item">
+            <img src="./image/Cauliflower.png" alt="Cauliflower">
+            <h1>Organic, Fruit, Packaged Meals, Baking</h1>
+            <h4>Organic Cauliflower</h4>
+            <p>7.88$</p>
+        </div>
+        <div class="sale-item">
+            <img src="./image/Cauliflower.png" alt="Cauliflower">
+            <h1>Organic, Fruit, Packaged Meals, Baking</h1>
+            <h4>Organic Cauliflower</h4>
+            <p>7.88$</p>
+            
+        </div>
+        <div class="sale-item">
+            <img src="./image/Cauliflower.png" alt="Cauliflower">
+            <h1>Organic, Fruit, Packaged Meals, Baking</h1>
+            <h4>Organic Cauliflower</h4>
+            <p>7.88$</p>
+        </div>
+        <div class="sale-item">
+            <img src="./image/mill.png" alt="mill">
+            <h1>Vegetable, Fruit</h1>
+            <h4>Bob's Red Mill</h4>
+            <p>32.88$</p>
+        </div>
+        <div class="sale-item">
+            <img src="./image/mill.png" alt="mill">
+            <h1>Vegetable, Fruit</h1>
+            <h4>Bob's Red Mill</h4>
+            <p>32.88$</p>
+        </div>
+        <div class="sale-item">
+            <img src="./image/mill.png" alt="mill">
+            <h1>Vegetable, Fruit</h1>
+            <h4>Bob's Red Mill</h4>
+            <p>32.88$</p>
+        </div>
     </div>
-    <div class="cereal">
-       <div class="sale-item"></div>
-       <div class="sale-item"></div>
-       <div class="sale-item"></div>
-       <div class="sale-item">
-           <img src="./image/Beetroot.png" alt="Beetroot">
-       </div>
-       <div class="sale-item">
-        <img src="./image/Beetroot.png" alt="Beetroot">
-       </div>
-       <div class="sale-item">
-        <img src="./image/Beetroot.png" alt="Beetroot">
-       </div>
-       <div class="sale-item">
-           <img src="./image/Cauliflower.png" alt="Cauliflower">
-       </div>
-       <div class="sale-item">
-        <img src="./image/Cauliflower.png" alt="Cauliflower">
-       </div>
-       <div class="sale-item">
-        <img src="./image/Cauliflower.png" alt="Cauliflower">
-       </div>
-       <div class="sale-item">
-           <img src="./image/mill.png" alt="mill">
-       </div>
-       <div class="sale-item">
-        <img src="./image/mill.png" alt="mill">
-       </div>
-       <div class="sale-item">
-        <img src="./image/mill.png" alt="mill">
-       </div>
+
+
+
+
+   
+
+
+
+    <div class="people">
+        <div class="title">Our Clients Testimonials</div>
+        <div class="person">
+            <img src="/image/girl.png" alt="girl">
+            <p>I’d like to admit that the quality of clothes is really good. I ordered different items from different manufacturers, and they are all high-class!</p>
+            <p>Tim Diaz</p>
+            <p>Customer</p>
+        </div>
+    </div>
+    <div class="subscribe">
+        <h2>Subscribe Newsletter</h2>
+        <div class="box">
+            <input type="text" placeholder="Enter your email ">
+            <button>SUBSCRIBE</button>
+        </div>
+    </div>
+    <div class="footer">
+        <ul class="contain">
+            <h2>Categories</h2>
+            <a href="#">New Products</a>
+            <a href="#">Our Stores</a>
+            <a href="#">Top sellers</a>
+            <a href="#">Uncategorized</a>
+            <a href="#">Your Health</a>
+        </ul>
+        <ul class="contain">
+            <h2>Information</h2>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Blog</a>
+            <a href="#">Shop</a>
+            <a href="#">Contacts</a>
+        </ul>
+        <ul class="contain">
+            <h2>My account</h2>
+            <a href="#">Checkout</a>
+            <a href="#">Compare</a>
+            <a href="#">My account</a>
+            <a href="#">Wishlist</a>
+           
+        </ul>
+        <ul class="contain-info">
+            <h2>Store Information</h2>
+          <p>Address: 4578 Marmora Road, Glasgow</p>
+          <p>Phones: +3(800) 2345-6789:
+            +3(800) 2345-6790</p>
+            <p> Hours: 7 Days a week from 9:00
+                am to 7:00 pm</p>
+                <p> E-mail: info@demolink.org</p>
+        </ul>
     </div>
 </body>
 
