--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="Project\Project1">貓貓網站</a> </li>
         <li> <a href="Project\Project2">蔬菜網站</a></li>
         <li> <a href="Project\Project3">toyoya</a></li>
-        <li> <a href="Project\Project4">Pizza Template</a></li>
+        <li> <a href="Project\Project4\PizzaCard.html">Pizza Template</a></li>
 
     </ul>
 
