--- a/Project/Project5/index.html
+++ b/Project/Project5/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
-                <img src="/image/iphone11-family.jpg" alt="hone11-family">
+                <img src="image/iphone11-family.jpg" alt="hone11-family">
             </div>
             <div class="col-12 col-md-6">
                 <div class="container">
