--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li> <a href="Project\Project3">toyoya</a></li>
         <li> <a href="Project\Project4">Pizza Template</a></li>
         <li> <a href="Project\Project5">Apple website</a></li>
+        <li> <a href="Project\Project6">GoogleMap</a></li>
 
     </ul>
 
