--- a/Project/Project5/index.html
+++ b/Project/Project5/index.html
@@ -10,120 +10,140 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
-    <style>
-        .item {
-            margin: 15px 0;
-        }
-    </style>
+    <title>iPhone</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+
+
 </head>
 
 <body>
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
-                <img src="image/iphone11-family.jpg" alt="hone11-family">
+                <img class="iphone-family" src="image/iphone11-family.jpg" alt="hone11-family">
             </div>
             <div class="col-12 col-md-6">
                 <div class="container">
                     <p>選擇外觀。</p>
                     <div class="row">
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <img src="image/finish-white-201909.jpg" alt="">
-                                <p>白色</p>
-                            </div>
+                            <label onclick="setColor('white')" class="iphone-color" for="color-white">
+                                <input type="radio" id="color-white" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <img src="image/finish-white-201909.jpg" alt="">
+                                    <p>白色</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <img src="image/finish-black-201909.jpg" alt="">
-                                <p>黑色</p>
-                            </div>
+                            <label onclick="setColor('black')" class="iphone-color" for="color-black">
+                                <input type="radio" id="color-black" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <img src="image/finish-black-201909.jpg" alt="">
+                                    <p>黑色</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <img src="image/finish-green-201909.jpg" alt="">
-                                <p>綠色</p>
-                            </div>
+                            <label onclick="setColor('green')" class="iphone-color" for="color-green">
+                                <input type="radio" id="color-green" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <img src="image/finish-green-201909.jpg" alt="">
+                                    <p>綠色</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <img src="image/finish-yellow-201909.jpg" alt="">
-                                <p>黃色</p>
-                            </div>
+                            <label onclick="setColor('yellow')" class="iphone-color" for="color-yellow">
+                                <input type="radio" id="color-yellow" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <img src="image/finish-yellow-201909.jpg" alt="">
+                                    <p>黃色</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <img src="image/finish-purple-201909.jpg" alt="">
-                                <p>紫色</p>
-                            </div>
+                            <label onclick="setColor('purple')" class="iphone-color" for="color-purple">
+                                <input type="radio" id="color-purple" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <img src="image/finish-purple-201909.jpg" alt="">
+                                    <p>紫色</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <img src="image/finish-red-201909.jpg" alt="">
-                                <p>(PRODUCE)RED</p>
-                            </div>
-
+                            <label onclick="setColor('red')" class="iphone-color" for="color-red">
+                                <input type="radio" id="color-red" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <img src="image/finish-red-201909.jpg" alt="">
+                                    <p>(PRODUCE)RED</p>
+                                </div>
+                            </label>
                         </div>
                     </div>
-
                 </div>
                 <div class="container">
                     <p>選擇儲存容量。</p>
                     <div class="row">
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <p>
-                                    <span>65</span>
-                                    GB**
-                                </p>
-                                <p>NT$24,900</p>
-                            </div>
+                            <label onclick="setPrice(24900)" class="iphone-color" for="64GB">
+                                <input type="radio" id="64GB" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <span class="storage-num">64</span>
+                                    <span class="storage-unit">GB**</span>
+                                    <p class="storage-price">NT$24,900</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <p>
-                                    <span>128</span>
-                                    GB**
-                                </p>
-                                <p>NT$26,900</p>
-                            </div>
+                            <label onclick="setPrice(26900)" class="iphone-color" for="128GB">
+                                <input type="radio" id="128GB" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <span class="storage-num">128</span>
+                                    <span class="storage-unit">GB**</span>
+                                    <p class="storage-price">NT$26,900</p>
+                                </div>
+                            </label>
                         </div>
                         <div class="col-12 col-md-6">
-                            <div class="item border text-center py-5">
-                                <p>
-                                    <span>256</span>
-                                    GB**
-                                </p>
-                                <p>NT$30,400</p>
-                            </div>
+                            <label onclick="setPrice(30400)" class="iphone-color" for="256GB">
+                                <input type="radio" id="256GB" name="selector">
+                                <div class="iphone-lay text-center">
+                                    <span class="storage-num">256</span>
+                                    <span class="storage-unit">GB**</span>
+                                    <p class="storage-price">NT$30,400</p>
+                                </div>
+                            </label>
+
                         </div>
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="row">
-
-
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
 
+
+                </div>
+            </div>
         </div>
 
-        <script>
+    </div>
 
-        </script>
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-        </script>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
+
+    <script src="assets/Js/script.js"></script>
+
 </body>
 
 </html>
