--- a/Project/Project5/index.html
+++ b/Project/Project5/index.html
@@ -12,7 +12,8 @@
 
     <title>iPhone</title>
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css"
+        integrity="sha384-xxzQGERXS00kBmZW/6qxqJPyxW3UR0BPsL4c8ILaIWXva5kFi7TxkIIaMiKtqV1Q" crossorigin="anonymous">
 
 </head>
 
@@ -24,7 +25,10 @@
             </div>
             <div class="col-12 col-md-6">
                 <div class="container">
-                    <p>選擇外觀。</p>
+                    <div class="top">
+                        <h2>購買iPhone11</h2>
+                        <p>選擇外觀。</p>
+                    </div>
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <label onclick="setColor('white')" class="iphone-color" for="color-white">
@@ -80,6 +84,14 @@
                                 </div>
                             </label>
                         </div>
+                        <div class="col-12 col-md-12">
+                            <div class="product-red-info d-flex">
+                                <img src="image/red.png" alt="">
+                                <p>每筆 iPhone 11 (PRODUCT)RED 購買，現在都直接捐助
+                                    <br>
+                                    The Global Fund 基金，以對抗 COVID-19。</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="container">
@@ -87,7 +99,7 @@
                     <div class="row">
                         <div class="col-12 col-md-6">
                             <label onclick="setPrice(24900)" class="iphone-color" for="64GB">
-                                <input type="radio" id="64GB" name="selector">
+                                <input type="radio" id="64GB" name="storage-selector">
                                 <div class="iphone-lay text-center">
                                     <span class="storage-num">64</span>
                                     <span class="storage-unit">GB**</span>
@@ -97,7 +109,7 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <label onclick="setPrice(26900)" class="iphone-color" for="128GB">
-                                <input type="radio" id="128GB" name="selector">
+                                <input type="radio" id="128GB" name="storage-selector">
                                 <div class="iphone-lay text-center">
                                     <span class="storage-num">128</span>
                                     <span class="storage-unit">GB**</span>
@@ -107,26 +119,55 @@
                         </div>
                         <div class="col-12 col-md-6">
                             <label onclick="setPrice(30400)" class="iphone-color" for="256GB">
-                                <input type="radio" id="256GB" name="selector">
+                                <input type="radio" id="256GB" name="storage-selector">
                                 <div class="iphone-lay text-center">
                                     <span class="storage-num">256</span>
                                     <span class="storage-unit">GB**</span>
                                     <p class="storage-price">NT$30,400</p>
                                 </div>
                             </label>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <div class="buy-content">
+                                <div class="finally-price-box">
+                                    <p class="finally-price"></p>
+                                    <p>含加值型營業稅：約 NT$1,186*。</p>
+                                    <a href="#"> 最低月付 NT$2,075，12 個月，0% 利率</a>
+                                </div>
+                                <div class="basket d-flex">
+                                    <button class="btn btn-primary">加入購物袋</button>
+                                    <div class="heart"><i class="far fa-heart"></i></div>
+                                </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-6 col-md-6">
 
+                                            <div class="take-ship">
+                                                <p><i class="fas fa-shopping-bag"></i></p>
+                                                <p>取貨:</p>
+                                                <p><a href="#">查看供貨況</a></p>
+                                            </div>
+
+                                        </div>
+                                        <div class="col-6 col-md-6">
+                                            <div class="take-ship">
+                                                <p><i class="fas fa-box"></i></p>
+                                                <p>
+                                                    送達:
+                                                    <br>
+                                                    星期二 2020/08/04 – 免額外付費
+                                                </p>
+                                                <p><a href="#">取得更多運送選項</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="row">
-
-
-                </div>
-            </div>
         </div>
-
     </div>
 
 
