--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <li> <a href="Project\Project4">Pizza Template</a></li>
         <li> <a href="Project\Project5">Apple website</a></li>
         <li> <a href="Project\Project6">GoogleMap</a></li>
-
+        <li> <a href="Project\Project7">猜數字</a></li>
+        <li> <a href="Project\Project8">jQuery圖表</a></li>
     </ul>
 
 
