--- a/Project/Project7/index.html
+++ b/Project/Project7/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+<h2>猜數字遊戲(?A?B)</h2>
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-12 text-center pt-5">
